fix(mobile): margins on small header
closes #31

--- a/_header.scss
+++ b/_header.scss
@@ -44,6 +44,11 @@
   @extend %col;
   padding: 4rem 0;
   margin-bottom: 6rem;
+
+  @media only screen and (max-width: 660px) {
+   padding-top: 0.3rem;
+   margin-bottom: 2rem;
+ }
 }
 
 .header_type_bar__title {
