--- a/style.css
+++ b/style.css
@@ -171,6 +171,10 @@ a {
 .header_type_bar {
   padding: 4rem 0;
   margin-bottom: 6rem; }
+  @media only screen and (max-width: 660px) {
+    .header_type_bar {
+      padding-top: 0.3rem;
+      margin-bottom: 2rem; } }
 
 .header_type_bar__title {
   font-family: var(--body-alt-font);
